--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" />
 
-  <title>React App</title>
+  <title>Test Front-end</title>
 </head>
 
 <body>
